hphp/hack/test/typecheck/attributes/reflectionEnumClass.php.exp
File "reflectionEnumClass.php", line 18, characters 26-37:
Invalid argument (Typing[4323])
  File "reflection.hhi", line 57, characters 43-43:
  `T` is a constrained type parameter
  File "reflection.hhi", line 57, characters 48-68:
  This type constraint is violated
  File "reflection.hhi", line 57, characters 48-68:
  Expected `HH\ClassLikeAttribute`
  File "reflectionEnumClass.php", line 8, characters 7-11:
  But got `FAttr`; implicitly defined constant `::class` is a string that contains the fully qualified name of `FAttr`
  File "reflectionEnumClass.php", line 18, characters 26-30:
    where the class `FAttr` was referenced here
